--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+      <meta name="viewport" content"width=device-width, intial-scale=1.0, minium-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="css/responsive.css">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
