--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head> 
     <meta charset="UTF-8">
+    <!--CREATE A META TAG TO HANDLE VIEWPORT SETTING -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximun-scale=1.0">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--ADD EXTRA LINK-->
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
   </head>
