--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
@@ -83,7 +84,7 @@
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
             <a href="#" target="_blank">Afordable Mortgages</a><br>
-            <a href="#" target="_blank">Professional Moving Crew</a>
+            <a href="#" target="_b        ``                                                                1lank">Professional Moving Crew</a>
           </p>
         </div>
 
