--- a/market-report.html
+++ b/market-report.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
@@ -76,7 +78,7 @@
         <h3>Correspondence</h3>
         <address>
           Exceptional Realty<br>
-          P.O. Box 5555<br>
+          P.O.Box 5555<br>
           Brooklyn, NY 11201
         </address>
       </div>
@@ -85,7 +87,7 @@
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
-          <a href="#" target="_blank">Affordable Mortgages</a><br>
+          <a href="#" target="_blank">Afordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
@@ -93,7 +95,7 @@
       <div class="col-1">
         <h3>Follow</h3>
         <p>
-          <a href="#" target="_blank">YouTube</a><br>
+          <a href="#" target="_blank">Youtube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
@@ -104,6 +106,6 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
 </html>
