--- a/market-report.html
+++ b/market-report.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<div class="card">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
@@ -108,4 +109,5 @@
   </footer>
 
 </body>
+</div>
 </html>
