--- a/market-report.html
+++ b/market-report.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
@@ -26,42 +28,66 @@
       <div id="navbar" class="light-fade">
         <div class="wrapper">
           <nav>
-            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a class="selected" href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
+            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a class="selected" href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
           </nav>
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
 
     <div class="wrapper clearfix">
-      <section class="col-3 first shadow">
-        <h3>Market Report</h3>
-        <table>
-          <tr>
-            <th>Address</th>
-            <th>City</th>
-            <th>State</th>
-            <th>Sales Price</th>
-          </tr>
-          <tr>
-            <td>2345 Fairview Ln.</td>
-            <td>Brooklyn</td>
-            <td>NY</td>
-            <td>$1.2 mil</td>
-          </tr>
-          <tr>
-            <td>974 Clapton St.</td>
-            <td>Queens</td>
-            <td>NY</td>
-            <td>$998 k</td>
-          </tr>
-          <tr>
-            <td>14A Belmont Way</td>
-            <td>Bronx</td>
-            <td>NY</td>
-            <td>$874 k</td>
-          </tr>
-        </table>
+      <section class="col-1 first shadow">
+        <img src="images/condo.jpg" alt="condo">
+        <h3>Condos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
       </section>
+
+      <section class="col-1 shadow">
+        <img src="images/townhome.jpg" alt="townhome">
+        <h3>Townhomes</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+      </section>
+
+      <section class="col-1 shadow">
+        <img src="images/coop.jpg" alt="coop">
+        <h3>Co-Ops</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+      </section>
+
+      <h2 class="milk-text clear">Featured Listings</h2>
+
+      <section class="col-2 first shadow">
+        <img src="images/featured.jpg" alt="featured">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+      </section>
+
+      <section class="col-1 shadow">
+        <h3>Property Archive</h3>
+        <h4>2014</h4>
+        <ul>
+          <li>Dec</li>
+          <li>Nov</li>
+          <li>Oct
+            <ul>
+              <li>17th</li>
+              <li>18th</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+
+      <section class="col-1 shadow">
+        <h3>Popular Listings</h3>
+        <!-- ordered list -->
+        <ol>
+          <li>348 Stockton St.</li>
+          <li>3742A Belevadere Rd.</li>
+          <li>41 Cleaton Ave.</li>
+        </ol>
+      </section>
+
     </div><!-- .wrapper -->
   </div><!-- .white-wood -->
 
@@ -104,6 +130,6 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
 </html>
