--- a/market-report.html
+++ b/market-report.html
@@ -1,39 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Market Report</title>
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
+  <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">-->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/responsive.css">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+  <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>-->
 </head>
+
 <body>
-  <div id="social">
-    <a class="twit" href="#" title="Twitter">Twitter</a>
-    <a class="fbook" href="#" title="Facebook">Facebook</a>
-    <a class="gplus" href="#" title="Google Plus">Google Plus</a>
+  <div id="social-side">
+    <a class="twit" href="#">Twitter</a>
+    <a class="fbook" href="#">Facebook</a>
+    <a class="gplus" href="#">Google Plus</a>
   </div>
 
-  <div class="white-wood">
-    <header class="medium-fade shadow">
-      <div class="wrapper">
-        <div id="logo">
-          <h1>Exceptional Realty Group</h1>
-          <h2>Exceptional Realty Group</h2>
-        </div>
-      </div><!-- .wrapper -->
-      <div id="navbar" class="light-fade">
-        <div class="wrapper">
-          <nav>
-            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a class="selected" href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
-          </nav>
-        </div><!-- .wrapper -->
-      </div><!-- #navbar -->
+  <div class="header-wrapper">
+    <header>
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+      </div>
+      <div id="social-top">
+        <a class="twit" href="#">Twitter</a>
+        <a class="fbook" href="#">Facebook</a>
+        <a class="gplus" href="#">Google Plus</a>
+      </div>
     </header>
+  </div>
 
-    <div class="wrapper clearfix">
-      <section class="col-3 first shadow">
+  <div class="nav-wrapper">
+    <div class="hamburger">&#9776</div>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="new-properties.html">New Properties</a>
+      <a href="real-estate-listings.html">Listings</a>
+      <a class="current" href="market-report.html">Market Report</a>
+      <a href="contact.html">Contact</a>
+      <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    </nav>
+  </div>
+ 
+  <div class="page-wrapper">
+    <div class="page-content">
+      <section id="report">
         <h3>Market Report</h3>
         <table>
           <tr>
@@ -62,48 +73,47 @@
           </tr>
         </table>
       </section>
-    </div><!-- .wrapper -->
-  </div><!-- .white-wood -->
+    </div>
+  </div>
+  
+  <div class="footer-wrapper">
+    <div class="footer-content">
 
-  <section id="details" class="medium-fade">
-    <div class="wrapper clearfix">
-      <div class="col-1 first border-right">
+      <section>
         <h3>Contact</h3>
         <p>
-          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-          phone: +1 710 555 1234
+          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br> phone: +1 710 555 1234
         </p>
-        <h3>Correspondence</h3>
         <address>
-          Exceptional Realty<br>
-          P.O. Box 5555<br>
-          Brooklyn, NY 11201
+          Exceptional Realty<br> P.O. Box 5555<br> Brooklyn, NY 11201
         </address>
-      </div>
+      </section>
 
-      <div class="col-1 border-right">
+      <section>
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
           <a href="#" target="_blank">Affordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
-      </div>
+      </section>
 
-      <div class="col-1">
+      <section>
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
-      </div>
-    </div><!-- .wrapper -->
-  </section>
+      </section>
 
-  <footer>
-    &copy; 2014 Exceptional Realty. All Rights Reserved.
-  </footer>
-  
+    </div>
+
+    <footer>
+      &copy; 2014 Exceptional Realty. All Rights Reserved.
+    </footer>
+  </div>
+
 </body>
+
 </html>
