--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -1,67 +1,84 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Exceptional Realty Group - Luxury Homes - Listings</title>
-  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
+  <title>Exceptional Realty Group - Luxury Homes - About</title>
+  <!--<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">-->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" type="text/css" href="css/responsive.css">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+  <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>-->
 </head>
+
 <body>
-  <div id="social">
-    <a class="twit" href="#" title="Twitter">Twitter</a>
-    <a class="fbook" href="#" title="Facebook">Facebook</a>
-    <a class="gplus" href="#" title="Google Plus">Google Plus</a>
+  <div id="social-side">
+    <a class="twit" href="#">Twitter</a>
+    <a class="fbook" href="#">Facebook</a>
+    <a class="gplus" href="#">Google Plus</a>
   </div>
 
-  <div class="white-wood">
-    <header class="medium-fade shadow">
-      <div class="wrapper">
-        <div id="logo">
-          <h1>Exceptional Realty Group</h1>
-          <h2>Exceptional Realty Group</h2>
-        </div>
-      </div><!-- .wrapper -->
-      <div id="navbar" class="light-fade">
-        <div class="wrapper">
-          <nav>
-            <a href="index.html">About</a><a href="new-properties.html">New Properties</a><a class="selected" href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
-          </nav>
-        </div><!-- .wrapper -->
-      </div><!-- #navbar -->
+  <div class="header-wrapper">
+    <header>
+      <div id="logo">
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+      </div>
+      <div id="social-top">
+        <a class="twit" href="#">Twitter</a>
+        <a class="fbook" href="#">Facebook</a>
+        <a class="gplus" href="#">Google Plus</a>
+      </div>
     </header>
-    
-    <div class="wrapper clearfix">
-      <section class="col-1 first shadow">
-        <img src="images/condo.jpg" alt="condo">
+  </div>
+
+  <div class="nav-wrapper">
+    <div class="hamburger">&#9776</div>
+    <nav>
+      <a href="index.html">About</a>
+      <a href="new-properties.html">New Properties</a>
+      <a class="current" href="real-estate-listings.html">Listings</a>
+      <a href="market-report.html">Market Report</a>
+      <a href="contact.html">Contact</a>
+      <a href="http://hud.gov" target="_blank">H.U.D.</a>
+    </nav>
+  </div>
+ 
+  <div class="page-wrapper">
+    <div class="page-content">
+      <section>
         <h3>Condos</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis
+          tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam
+          ad.</p>
       </section>
 
-      <section class="col-1 shadow">
-        <img src="images/townhome.jpg" alt="townhome">
+      <section>
         <h3>Townhomes</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis
+          tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam
+          ad.</p>
       </section>
 
-      <section class="col-1 shadow">
-        <img src="images/coop.jpg" alt="coop">
+      <section>
         <h3>Co-Ops</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam ad.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, perspiciatis atque amet repudiandae sed unde facilis
+          tempora aspernatur. Repellendus, beatae eaque velit dolores incidunt reprehenderit officiis consectetur impedit numquam
+          ad.</p>
       </section>
 
-      <h2 class="milk-text clear">Featured Listings</h2>
+      <h2 class="hrule milk-text">Featured Listings</h2>
 
-      <section class="col-2 first shadow">
-        <img src="images/featured.jpg" alt="featured">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+      <section id="featured-listings">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia
+          laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia
+          laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia
+          laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia
+          laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
       </section>
 
-      <section class="col-1 shadow">
+      <section>
         <h3>Property Archive</h3>
         <h4>2014</h4>
         <ul>
@@ -76,7 +93,7 @@
         </ul>
       </section>
 
-      <section class="col-1 shadow">
+      <section>
         <h3>Popular Listings</h3>
         <!-- ordered list -->
         <ol>
@@ -86,48 +103,47 @@
         </ol>
       </section>
 
-    </div><!-- .wrapper -->
-  </div><!-- .white-wood -->
+    </div>
+  </div>
+  
+  <div class="footer-wrapper">
+    <div class="footer-content">
 
-  <section id="details" class="medium-fade">
-    <div class="wrapper clearfix">
-      <div class="col-1 first border-right">
+      <section>
         <h3>Contact</h3>
         <p>
-          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
-          phone: +1 710 555 1234
+          email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br> phone: +1 710 555 1234
         </p>
-        <h3>Correspondence</h3>
         <address>
-          Exceptional Realty<br>
-          P.O. Box 5555<br>
-          Brooklyn, NY 11201
+          Exceptional Realty<br> P.O. Box 5555<br> Brooklyn, NY 11201
         </address>
-      </div>
+      </section>
 
-      <div class="col-1 border-right">
+      <section>
         <h3>Links</h3>
         <p>
           <a href="#" target="_blank">Home Restoration</a><br>
           <a href="#" target="_blank">Affordable Mortgages</a><br>
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
-      </div>
+      </section>
 
-      <div class="col-1">
+      <section>
         <h3>Follow</h3>
         <p>
           <a href="#" target="_blank">YouTube</a><br>
           <a href="#" target="_blank">Facebook</a><br>
           <a href="#" target="_blank">Twitter</a>
         </p>
-      </div>
-    </div><!-- .wrapper -->
-  </section>
+      </section>
 
-  <footer>
-    &copy; 2014 Exceptional Realty. All Rights Reserved.
-  </footer>
+    </div>
+
+    <footer>
+      &copy; 2014 Exceptional Realty. All Rights Reserved.
+    </footer>
+  </div>
 
 </body>
+
 </html>
