--- a/new-properties.html
+++ b/new-properties.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - New Properties</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
@@ -31,7 +32,7 @@
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
-  
+
     <div class="wrapper clearfix">
 
       <section class="col-3 first shadow">
@@ -98,6 +99,6 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
 </html>
