--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <a href="#" target="_blank">Twitter</a>
           </p>
         </div>
-      </div><!-- .wrapper -->
+      </div><!-- .wrapper --><!--test-->
     </section>
 
     <footer>
