--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -5,7 +5,10 @@
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=10.0, minimum-scale=1.0, maximum-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=10.0, minimum-scale=1.0, maximum-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
+  <link rel="stylesheet" href:"css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
 </head>
 <body>
@@ -31,7 +34,7 @@
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
-    
+
     <div class="wrapper clearfix">
       <section class="col-1 first shadow">
         <img src="images/condo.jpg" alt="condo">
