--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+  <meta name="viewport" content="width=device-width" initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
+
 </head>
 <body>
   <div id="social">
@@ -31,7 +33,7 @@
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
-    
+
     <div class="wrapper clearfix">
       <section class="col-1 first shadow">
         <img src="images/condo.jpg" alt="condo">
