added Instagram link

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <a class="twit" href="#" title="Twitter">Twitter</a>
       <a class="fbook" href="#" title="Facebook">Facebook</a>
       <a class="gplus" href="#" title="Google Plus">Google Plus</a>
+      <a class="igram" href="#" title="Instagram">Instagram</a>
     </div>
 
     <div class="white-wood">
