add responsive layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <!-- Setup the viewport so the page adapts to whatever device it is being viewed on  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <title>Exceptional Realty Group - Luxury Homes - About</title>
     <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" type="text/css" href="css/responsive.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
   </head>
@@ -27,6 +30,7 @@
           <div class="wrapper">
             <nav class="clearfix">
               <a class="selected" href="index.html">About</a><a href="new-properties.html">New Properties</a><a href="real-estate-listings.html">Listings</a><a href="market-report.html">Market Report</a><a href="contact.html">Contact</a><a href="http://hud.gov" target="_blank">H.U.D.</a><a class="menu-icon">&#9776;</a>
+            <!--the last part of this ie menu-icon - is used to hide the nav bar and turn it into a drop down menu using JS for the drop down navigation. Needed when screen is too small to display a navbar -->
             </nav>
           </div><!-- .wrapper -->
         </div><!-- #navbar -->
