--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
   <title>Exceptional Realty Group - Luxury Homes - Contact</title>
   <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/responsive.css">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
-</head>
+  <link rel="stylesheet" href="css/responsive.css">
 <body>
  <div id="social">
     <a class="twit" href="#" title="Twitter">Twitter</a>
@@ -31,7 +31,7 @@
         </div><!-- .wrapper -->
       </div><!-- #navbar -->
     </header>
-    
+
     <div class="wrapper clearfix">
 
       <section class="col-2 first shadow">
@@ -96,6 +96,6 @@
   <footer>
     &copy; 2014 Exceptional Realty. All Rights Reserved.
   </footer>
-  
+
 </body>
 </html>
