--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <div id="logo">
             <h1>Exceptional Realty Group</h1>
             <h2>Exceptional Realty Group</h2>
+            <h3>Exceptional Realty Group</h3>
           </div>
         </div><!-- .wrapper -->
         <div id="navbar" class="light-fade">
